Fixed findbugs warnings